# python-nabot-mebo2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  commands.py  controls.py  feature_extractor.py  graphical_interface.py  imaging.py  object_detector.py  pyproject.toml  requirements.txt  robot_controller.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  movement.rst  video-audio.rst
examples/: graphical_interface.py  gui_control.py  object_detection.py  requirements.txt  voice_control.py
examples/object_detection/: transforms.py
src/mebo2_nabot/: __init__.py  commands.py  controls.py  robot.py
